apps/staging/kubernetes-dashboard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/hostname: k8s.staging.home.lewelly.com
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  ingressClassName: traefik
  tls:
    - secretName: kubernetes-dashboard-staging-tls-secret
      hosts:
        - k8s.staging.home.lewelly.com
  rules:
    - host: k8s.staging.home.lewelly.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
